--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,15 +21,28 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.FitStreak"
             tools:targetApi="31">
+
         <activity
-            android:name=".UserSetup"
-            android:exported="true" >
+                android:name=".activities.SignIn"
+                android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+                <activity
+                    android:name=".UserSetup"
+                    android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".UserSetup"-->
+<!--            android:exported="true" >-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
         <activity
             android:name=".WaterActivity"
             android:exported="false" />
